# doc2lora

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTALL_GUIDE.md  R2_TROUBLESHOOTING.md  README.md  USAGE.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  codeql.yml  release.yml
demo/: README.md  index.html  worker.js  wrangler.toml
demo/data/: api_documentation.html  best_practices.txt  developer_duties.md  developer_profile.json  development_guide.xlsx  project_config.xml  tech_stack.yml
demo/scripts/: deploy_to_r2.bat  deploy_to_r2.sh  setup.bat  setup.sh  train_lora.bat  train_lora.sh  wrangler_deploy.bat  wrangler_deploy.sh
doc2lora/: __init__.py  cli.py  core.py  deploy.py  lora_trainer.py  parsers.py  utils.py
examples/: .env.example  basic_usage.py  gemma_usage.py  llama_usage.py  media_and_optimization.py  mistral_usage.py  qlora_usage.py  qwq_usage.py  r2_usage.py  subdirectory_labeling_demo.py
examples/example_documents/: archive_config.json  archive_test.md  sample.csv  sample.json  sample.md  sample.txt  sample_conversation.txt  sample_documentation.md  sample_instructions.txt
examples/output/demo_adapter_adapter/: README.md
tests/: conftest.py  test_cli.py  test_core.py  test_deploy.py  test_lora_trainer.py  test_media_formats.py  test_new_formats.py  test_parsers.py  test_utils.py
