[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2lora"
dynamic = ["version"]
description = "A library for fine-tuning LLMs using LoRA by using a folder of documents as input"
readme = "README.md"
authors = [{name = "Gregory Mitchell", email = "gregory@earth-app.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
# core runtime only; format/integration parsers live in optional extras (see below)
dependencies = [
    "torch>=1.13.0",
    "transformers>=4.21.0",
    "peft>=0.3.0",
    "datasets>=2.0.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
# document/format parsers
docs = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.21",
    "odfpy>=1.4.1",
    "striprtf>=0.0.26",
    "EbookLib>=0.18",
    "py7zr>=0.20.0",
]
# image text recognition (OCR); needs the system tesseract-ocr binary
image = [
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
]
# audio transcription (speech-to-text); faster-whisper is the default backend.
# faster-whisper/openai-whisper need the ffmpeg binary; the SpeechRecognition
# fallback needs ffmpeg only for non-wav formats (via pydub)
audio = [
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
]
# video ingestion: per-frame OCR (opencv + tesseract) + audio transcript (whisper)
video = [
    "opencv-python>=4.7.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "faster-whisper>=1.0.0",
]
# cloudflare r2 ingestion
r2 = [
    "boto3>=1.26.0",
    "python-dotenv>=1.0.0",
]
# 4-bit QLoRA training (cuda only)
quant = [
    "bitsandbytes>=0.41.0",
]
# everything a user could want at runtime
all = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.21",
    "odfpy>=1.4.1",
    "striprtf>=0.0.26",
    "EbookLib>=0.18",
    "py7zr>=0.20.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
    "opencv-python>=4.7.0",
    "boto3>=1.26.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.41.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
doc2lora = "doc2lora.cli:main"

[project.urls]
Homepage = "https://github.com/earth-app/doc2lora"
Repository = "https://github.com/earth-app/doc2lora"
Issues = "https://github.com/earth-app/doc2lora/issues"

[tool.setuptools.packages.find]
include = ["doc2lora*"]

[tool.setuptools.dynamic]
version = {attr = "doc2lora.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "optional_dep: marks tests that require an optional dependency (skipped if missing)",
]
